package library.event;

/**
 * Descreve os tipos disponíveis do evento
 *
 * @author Gilson Nunes Junior | 2025206104
 */
public enum EventCategory {
    /**
     * Acadêmicos / Escolares (ex.: Feira de Ciências, Sarau)
     */
    ACADEMICO, //
    /**
     * Corporativos (ex.: Feira de Emprego, Apresentação de Resultados)
     */
    CORPORATIVO, //
    /**
     * Entretenimento (ex.: Teatro, Show)
     */
    ENTRETENIMENTO, //
    /**
     * Esportes Eletrônicos (ex. Campeonatos em LAN, Masterclasses com Times Profissionais)
     */
    E_SPORTS, //
    /**
     * Esportivos (ex.: Jogo de Futebol, Voleibol)
     */
    ESPORTIVO
}